# discline

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  errors.rs  main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  gateway.rs  lib.rs  queries.rs
crates/client/src/errors/: client.rs  gateway.rs
crates/client/src/traits/: rest_client.rs
crates/client/tests/: gateway_integration.rs  message_integration.rs
crates/commands/: Cargo.toml
crates/state/: Cargo.toml
crates/tui/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: channel.rs  guild.rs  message.rs  user.rs
docs/: ARCHITECTURE.md  CONTEXT.md  TASKS.md
