[workspace]
resolver = "1"
members = ["crates/cli", "crates/client", "crates/commands", "crates/state", "crates/tui", "crates/types"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Victor Vasconcelos"]
description = "A terminal client for Discord"

[workspace.dependencies]
serenity = "0.12"

ratatui = "0.30.0"
crossterm = "0.29.0"

tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
tokio-tungstenite = { version = "0.28.0 ", features = ["rustls-tls-native-roots"] }

anyhow = "1.0"
toml = "1.0.2"
rand = "0.10.0"
thiserror = "1.0.28"

clap = { version = "4.5.58", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }

serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

dirs = "6.0.0"
mockito = "1.7.2"
config = "0.15.19"
dotenvy = "0.15.7"
futures-util = "0.3.32"
