[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
types = { path = "../types" }

rand = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
